<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="handler"
            type="com.example.win7.applicationformobven.ResponseViewModel" />

    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:text="@string/select_city"
            android:layout_gravity="start"
            android:gravity="start"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/cityListRV"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:soundEffectsEnabled="false"
            android:background="#FFFFFF"
            android:layout_marginBottom="25dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/battery"
            android:layout_gravity="start"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                style="?android:attr/progressBarStyleHorizontal"
               />
            <TextView
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:id="@+id/batteryPercentageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/wifi"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Switch
            android:layout_marginStart="20dp"
            android:id="@+id/wifiSW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

    </LinearLayout>
    <Button
        android:onClick="@{() -> handler.searchCityClick(handler.selectedCity)}"
        android:id="@+id/saveBT"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
</LinearLayout>
</layout>