<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.example.win7.applicationformobven.ResponseViewModel" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/bottomMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:weightSum="1">

            <View
                android:id="@+id/lineBottomHome"
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:background="#A0C8C7CC"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:onClick="@{() -> handler.bottomMenuClick(`home`)}"
                    android:id="@+id/bottomMenuHome"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:onClick="@{() -> handler.bottomMenuClick(`home`)}"
                        android:id="@+id/bottomMenuHomeIV"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/icon_home_passive" />

                    <TextView
                        android:id="@+id/bottomMenuHomeTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:maxLines="1"
                        android:text="@string/home"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:onClick="@{() -> handler.bottomMenuClick(`camera`)}"
                    android:id="@+id/bottomMenuSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:onClick="@{() -> handler.bottomMenuClick(`camera`)}"
                        android:id="@+id/bottomMenuSearchIV"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/icon_camera_passive" />

                    <TextView
                        android:id="@+id/bottomMenuSearchTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:maxLines="1"
                        android:text="@string/camera"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:onClick="@{() -> handler.bottomMenuClick(`settings`)}"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:onClick="@{() -> handler.bottomMenuClick(`settings`)}"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/icon_settings_passive" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:maxLines="1"
                        android:text="@string/settings"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>